--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+  <% if signed_in? %>
+    <%= current_user.username %>
+  <% else %>
+    <%= link_to "Sign Up", new_user_url %>
+    <%= link_to "Sign In", new_session_url %>
+  <% end %>
+
 <%= yield %>
 
 </body>
